<resources>
    <string name="app_name">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="please_wait">Please wait.</string>
    <string name="symbol_test">Symbol</string>
    <string name="loading">Loading the content.</string>
    <string name="stock_low_tag_line">Stock Low values</string>
    <string name="stock_high_tag_line">Stock High values</string>

    <!--SharedPreference keys -->
    <string name="network_state" translatable="false">network_state</string>
    <string name="result" translatable="false">result</string>
    <string name="error_message" translatable="false">error_message</string>
    <string name="symbol_extra" translatable="false">symbol</string>

    <!-- All messages related to errors. -->
    <string name="empty_message" translatable="true">No Data is Available</string>
    <string name="saved_stock">This stock is already being tracked!</string>
    <string name="stock_symbol_not_present_error">Entered Stock Symbol is not present.</string>
    <string name="incorrect_symbol_entered">Incorrect Symbol Entered</string>
    <string name="stocks_out_of_date_error">Uh-oh! Stocks are out of date.
        This app requires an internet connection!</string>
    <string name="application_error">Well this is embarrassing. Please contact us on app store.</string>
    <string name="server_error">No Stock Information Available. The server is not returning data. Please check back in sometime.</string>
    <string name="internet_required">Hi There! This app requires an internet connection</string>

    <!-- content descriptions-->
    <string name="floating_action_button">Add New Stock To Track</string>
    <string name="loading_chart">Data is Loading. Please Wait!</string>

    <!-- DetailsActivity Description String -->
    <string name="description_1d">This Button will show Share History of current day only</string>
    <string name="description_1w">This Button will show Share History of past 1 week</string>
    <string name="description_1m">This Button will show Share History of past 1 month</string>
    <string name="description_1y">This Button will show Share History of past 1 year</string>
    <string name="description_5y">This Button will show Share History of past 5 year</string>
    <string name="description_max">This Button will show Share History of Max Period</string>
    <string name="description_fab">This Button will Help to Add new Stock</string>
    <string name="symbol_intent_keyword" translatable="false">Symbol</string>
    <string name="date_result_keyword" translatable="false">Date</string>
    <string name="close_result_keyword" translatable="false">close</string>
    <string name="timestamp_result_keyword" translatable="false">Timestamp</string>
    <string name="stock_result_keyword" translatable="false">Stock Rate</string>
    <!-- Details Activity  Different Chart Category -->
    <string name="_1d" translatable="false">1D</string>
    <string name="_1w" translatable="false">1W</string>
    <string name="_1m" translatable="false">1M</string>
    <string name="_1y" translatable="false">1Y</string>
    <string name="_5y" translatable="false">5Y</string>
    <string name="max" translatable="false">MAX</string>


</resources>
