<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.sam_chordas.android.stockhawk.ui.DetailActivity">

    <RelativeLayout
        android:background="@color/material_blue_500"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.v7.widget.Toolbar
        android:id="@+id/symbolInDetail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator" />
    <!--<TextView-->
        <!--android:id="@+id/symbolInDetail"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/symbol_test"-->
        <!--android:padding="10dp"-->
        <!--android:textColor="#FFFFFF"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:textSize="26sp"/>-->
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dayInDetail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_1d"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_1d"/>
        <TextView
            android:id="@+id/weekInDetail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_1w"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_1w"/>
        <TextView
            android:id="@+id/monthInDetail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_1m"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_1m"/>
        <TextView
            android:id="@+id/yearInDetail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_1y"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_1y"/>
        <TextView
            android:id="@+id/fiveYearInDetail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_5y"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/_5y"/>
        <TextView
            android:id="@+id/maxInDetail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_max"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/max"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/linechart"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
